Change section One and Two

--- a/index.html
+++ b/index.html
@@ -56,11 +56,12 @@
 	<section id="one" class="main style2 right dark fullscreen">
 		<div class="content box style2">
 			<header>
-				<h2>What I Do</h2>
+				<h2>Święta Bożego Narodzenia</h2>
 			</header>
-			<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
-				Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis arcu,
-				id varius justo euismod in. Curabitur egestas consectetur magna.</p>
+			<p>W tradycji chrześcijańskiej – święto upamiętniające
+				narodziny Jezusa Chrystusa. Jest to stała uroczystość liturgiczna przypadająca na 25 grudnia. Boże
+				Narodzenie poprzedzone jest okresem trzytygodniowego oczekiwania (dokładnie czterech niedziel), zwanego
+				adwentem. W Kościele katolickim jest to święto nakazane.</p>
 		</div>
 		<a href="#two" class="button style2 down anchored">Next</a>
 	</section>
@@ -69,11 +70,12 @@
 	<section id="two" class="main style2 left dark fullscreen">
 		<div class="content box style2">
 			<header>
-				<h2>Who I Am</h2>
+				<h2>Tradycje</h2>
 			</header>
-			<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
-				Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis arcu,
-				id varius justo euismod in. Curabitur egestas consectetur magna.</p>
+			<p>Zgodnie z tradycją bożonarodzeniową w Polsce wieczerza wigilijna rozpoczyna się wraz z "pierwszą gwiazdką
+				na niebie". Jest to symboliczne nawiązanie do Gwiazdy Betlejemskiej zwiastującej narodziny Jezusa, którą
+				według Biblii na wschodniej stronie nieba ujrzeli Trzej Królowie.
+			</p>
 		</div>
 		<a href="#work" class="button style2 down anchored">Next</a>
 	</section>
